--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <ul>
             <li>
                 <p>Pixpa Site</p>
-                <div class="foto_1"><a href="https://super0645.github.io/pixpa_Site_Replica_Test/" target="_blank"></a></div>
+                <div class="foto_1"><a href="https://andrea-rapacciuolo.github.io/pixpa_Site_Replica_Test/" target="_blank"></a></div>
             </li>
             <li>
                 <p>Cyberpunk Zenith</p>
-                <div class="foto_2"><a href="https://super0645.github.io/Cyberpunk_Zenith/" target="_blank"></a></div>
+                <div class="foto_2"><a href="https://andrea-rapacciuolo.github.io/Cyberpunk_Zenith/" target="_blank"></a></div>
             </li>
             <li>
                 <p>Work in Progress...</p>
