Update card styles and content for improved layout and readability

--- a/index.html
+++ b/index.html
@@ -45,45 +45,55 @@
                 <img class="card-img-top" src="img/wild_focus.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Wild Focus</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <!-- <a href="https://andrea-rapacciuolo.github.io/Cyberpunk_Zenith/" class="btn btn-primary bold" target="_blank">Vai al sito</a> -->
-                    <a href="#"><button type="button" class="btn btn-outline-primary bold full_width disabled" target="_blank">Work in progress</button></a>
+                    <p class="card-text">Branding e Packaging per una linea di energy drink. Lo studio include l'identità visiva coordinata di tre prodotti, lo sviluppo di campagne social e la progettazione di mockup ambientati.</p>
+                    <div>
+                        <!-- <a href="https://andrea-rapacciuolo.github.io/Cyberpunk_Zenith/" class="btn btn-primary bold" target="_blank">Vai al sito</a> -->
+                        <a href="#"><button type="button" class="btn btn-outline-primary bold full_width disabled" target="_blank">Work in progress</button></a>
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="img/home_photo_5.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Cyberpunk Zenith</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <a href="https://andrea-rapacciuolo.github.io/Cyberpunk_Zenith/" class="btn btn-primary bold" target="_blank">Vai al sito</a>
-                    <a href="#"><button type="button" class="btn btn-outline-primary bold" target="_blank">Vai al PDF</button></a>
+                    <p class="card-text">Case study completo per il lancio di un titolo videoludico sci-fi. Il progetto copre l'intera filiera creativa: dal naming al logo design, fino alla progettazione del packaging fisico, dei pittogrammi di categoria e delle campagne di street advertising per un impatto visivo totale.</p>
+                    <div>
+                        <a href="https://andrea-rapacciuolo.github.io/Cyberpunk_Zenith/" class="btn btn-primary bold" target="_blank">Vai al sito</a>
+                        <a href="#"><button type="button" class="btn btn-outline-primary bold" target="_blank">Vai al PDF</button></a>
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="img/Photo_work_2.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Pixpa Project</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <a href="https://andrea-rapacciuolo.github.io/pixpa_Site_Replica_Test/" target="_blank" class="btn btn-primary bold full_width">Vai al sito</a>
-                    <!-- <a href="#"><button type="button" class="btn btn-outline-primary bold">Vai al PDF</button></a> -->
+                    <p class="card-text">Una ricostruzione completa di un portfolio Pixpa. Il progetto dimostra la capacità di analizzare architetture web complesse e di replicarle fedelmente, curando ogni dettaglio, dalle animazioni alla velocità di caricamento, per un risultato indistinguibile dall'originale.</p>
+                    <div>
+                        <a href="https://andrea-rapacciuolo.github.io/pixpa_Site_Replica_Test/" target="_blank" class="btn btn-primary bold full_width">Vai al sito</a>
+                        <!-- <a href="#"><button type="button" class="btn btn-outline-primary bold">Vai al PDF</button></a> -->
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="img/sepatech.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Sepatech</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <!-- <a href="#" class="btn btn-primary bold">Vai al sito</a> -->
-                    <a href="#" target="_blank"><button type="button" class="btn btn-outline-primary bold full_width">Vai al PDF</button></a>
+                    <p class="card-text">Visual identity per un brand tech focalizzato sul DIY informatico. Dallo studio del payoff 'Build it. Learn it. Fix it.' alla creazione di mockup di prodotto, il progetto comunica solidità e supporto tecnico attraverso un design moderno e funzionale.</p>
+                    <div>
+                        <!-- <a href="#" class="btn btn-primary bold">Vai al sito</a> -->
+                        <a href="#" target="_blank"><button type="button" class="btn btn-outline-primary bold full_width">Vai al PDF</button></a>
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="img/last_horizon.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Last Horizon</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <!-- <a href="#" class="btn btn-primary bold">Vai al sito</a> -->
-                    <a href="#" target="_blank"><button type="button" class="btn btn-outline-primary bold full_width">Vai al PDF</button></a>
+                    <p class="card-text">Studio completo di visual identity per un thriller sci-fi. Dalla progettazione del logo alla creazione di poster e banner social, un'immersione grafica in un futuro dominato dalle corporazioni e dal vuoto cosmico.</p>
+                    <div>
+                        <!-- <a href="#" class="btn btn-primary bold">Vai al sito</a> -->
+                        <a href="#" target="_blank"><button type="button" class="btn btn-outline-primary bold full_width">Vai al PDF</button></a>
+                    </div>
                 </div>
             </div>
         </div>
