--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content_box">
             <p class="title">Sviluppatore Web & Creative Designer</p>
             <p class="subtitle">Trasformo idee complesse in esperienze digitali moderne e funzionali.</p>
-            <button type="button" class="btn btn-primary bold main_button_color bold">Scarica il mio cv</button>
+            <button type="button" class="button_main btn btn-primary bold">Scarica il mio cv</button>
         </div>
     </section>
     <!-- section main -->
