Update CV download button link to remove external URL

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content_box">
             <p class="title">Sviluppatore Web & Creative Designer</p>
             <p class="subtitle">Trasformo idee complesse in esperienze digitali moderne e funzionali.</p>
-            <button type="button" class="button_main btn btn-primary bold"><a href="https://www.youtube.com/watch?v=GBIIQ0kP15E">Scarica il mio cv</a></button>
+            <button type="button" class="button_main btn btn-primary bold"><a href="#">Scarica il mio cv</a></button>
         </div>
     </section>
     <!-- section main -->
